@@ -1,8 +1,10 @@
 # wifi-info-client
 
 ##Build
-mvn clean & install
+mvn clean && install
 mvn package
 
 ##Run
-mvn spring:boot run
+export JAVA_OPTS=-Xmx1024m -XX:MaxPermSize=128M
+cd Wifi-Info-Client-App
+mvn spring-boot:run
